se configura ambos ambients en .env

--- a/config.env
+++ b/config.env
@@ -1,4 +1,17 @@
+# Configuración del servidor
 PORT=3000
-BACKEND_URL=http://10.216.1.36:8091
-ACCESS_KEY=11_5rspstujlve2egapt7qpg20vo0
+
+# URL del backend REST
+# PROD BACKEND_URL=http://10.216.1.36:8091
+# MODELO 
+ BACKEND_URL=http://10.216.101.36:8091
+
+
+# Clave de acceso para autenticación
+# PORD ACCESS_KEY=11_5rspstujlve2egapt7qpg20vo0
+# MODELO
+ACCESS_KEY=11_fk55oseevr2l758lbnu1ne9f76
+
+
+# URL backend WEB
 TICKETING_ENDPOINT=http://10.216.10.186:8280/services/TicketingService.TicketingServiceHttpSoap11Endpoint
