SE CONFIGURAN AMBIENTES

--- a/config.env
+++ b/config.env
@@ -3,8 +3,8 @@ PORT=3000
 
 # URL del backend REST
 # PROD BACKEND_URL=http://10.216.1.36:8091
-# MODELO 
- BACKEND_URL=http://10.216.101.36:8091
+# MPRODUCCION
+ BACKEND_URL=http://10.216.11.180:8091
 
 
 # Clave de acceso para autenticación
