se hace compatible con node16

--- a/config.env
+++ b/config.env
@@ -8,9 +8,10 @@ PORT=3000
 
 
 # Clave de acceso para autenticación
-# PORD ACCESS_KEY=11_5rspstujlve2egapt7qpg20vo0
+ #PORD 
+ ACCESS_KEY=11_5rspstujlve2egapt7qpg20vo0
 # MODELO
-ACCESS_KEY=11_fk55oseevr2l758lbnu1ne9f76
+#ACCESS_KEY=11_fk55oseevr2l758lbnu1ne9f76
 
 
 # URL backend WEB
